--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
+    <cn.cnlinfo.ccf.view.StopScrollViewPager
         android:id="@+id/vp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </android.support.v4.view.ViewPager>
+    </cn.cnlinfo.ccf.view.StopScrollViewPager>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
