--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -5,51 +5,166 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cn.cnlinfo.ccf.activity.LoginRegisterActivity">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="225dp"
+        android:background="@drawable/ic_global">
 
-   <ImageView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:src="@drawable/ic_cc_mall"
-       />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Language"
+                android:textAllCaps="false"
+                android:textColor="@color/color_white_ffffff"
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/login_text_style"
+                android:gravity="center"
+                android:layout_marginTop="3dp"
+                android:text="中文"
+                android:textColor="@color/color_white_ffffff"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_marginBottom="6dp"
+            android:layout_marginRight="10dp"
+            android:text="CC用户管理平台"
+            android:textColor="@color/color_white_ffffff"
+            android:textSize="12sp" />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        android:layout_marginLeft="64dp"
-        android:layout_marginRight="64dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="32dp"
-       >
+        android:background="@drawable/ic_background">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="64dp"
+            android:layout_marginRight="64dp"
+            android:layout_marginTop="50dp"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
-            <TextView
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="用户名" />
+
+                <EditText
+                    android:id="@+id/et_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/edit_text_style" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="密码" />
+
+                <EditText
+                    android:id="@+id/et_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/edit_text_style" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="验证码" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:layout_marginTop="3dp"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/et_verification_code"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/edit_text_style" />
+
+                    <Button
+                        android:id="@+id/btn_get_verification_code"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="15dp"
+                        android:layout_weight="0.5"
+                        android:background="@drawable/button_dash_style"
+                        android:text="获取" />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/btn_login"
+                    android:layout_width="69dp"
+                    android:layout_height="22dp"
+                    android:background="@drawable/button_dash_style"
+                    android:text="登录"
+                    android:onClick="toLogin"/>
+
+                <Button
+                    android:id="@+id/btn_register"
+                    android:layout_width="69dp"
+                    android:layout_height="22dp"
+                    android:layout_marginLeft="18dp"
+                    android:background="@drawable/button_dash_style"
+                    android:text="注册"
+                    android:onClick="toRegister"
+                    />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_forget_pass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="用户名"
-                />
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:background="@drawable/edit_text_style"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="密码"
-                />
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="32dp" />
+                android:layout_marginTop="16dp"
+                android:background="@null"
+                android:text="忘记密码?" />
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
