--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -15,6 +15,13 @@
         android:weightSum="5"
         android:layout_gravity="bottom">
         <TextView
+            android:id="@+id/tv_main_page"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/main_page"
+            android:gravity="center_horizontal"/>
+        <TextView
             android:id="@+id/tv_gauage_panel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -49,13 +56,6 @@
             android:gravity="center_horizontal"
             android:text="@string/cc_union"/>
 
-        <TextView
-            android:id="@+id/tv_setting_center"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/setting_center"
-            android:gravity="center_horizontal"/>
 
     </LinearLayout>
 
