--- a/app/src/main/res/layout/fragment_setting_center.xml
+++ b/app/src/main/res/layout/fragment_setting_center.xml
@@ -6,6 +6,6 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/setting_center"
+    android:text="@string/main_page"
     />
 </LinearLayout>
