--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center_vertical|left"
         android:background="@null"
         android:layout_marginLeft="18dp"
-        android:src="@drawable/icon_back" />
+        android:src="@drawable/ic_back" />
 
     <TextView
         android:id="@+id/tv_title"
