--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,5 +31,8 @@
         <item name="android:textColor">#f5543a</item>
         <item name="android:textSize">12sp</item>
     </style>
-
+    <style name="text_0e1214_17">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">#0e1214</item>
+    </style>
 </resources>
