--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -72,11 +72,16 @@
                     android:layout_height="wrap_content"
                     android:text="用户名" />
 
-                <EditText
+                <cn.cnlinfo.ccf.view.CleanEditText
                     android:id="@+id/et_username"
                     android:layout_width="match_parent"
                     android:layout_height="32dp"
                     android:layout_marginTop="3dp"
+                    android:gravity="center"
+                    android:inputType="phone"
+                    android:maxLines="1"
+                    android:maxLength="11"
+                    android:textColor="@drawable/selector_edittext_text_color"
                     android:background="@drawable/edit_text_style" />
             </LinearLayout>
 
@@ -91,11 +96,16 @@
                     android:layout_height="wrap_content"
                     android:text="密码" />
 
-                <EditText
+                <cn.cnlinfo.ccf.view.CleanEditText
                     android:id="@+id/et_password"
                     android:layout_width="match_parent"
                     android:layout_height="32dp"
                     android:layout_marginTop="3dp"
+                    android:gravity="center"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:maxLength="11"
+                    android:textColor="@drawable/selector_edittext_text_color"
                     android:background="@drawable/edit_text_style" />
             </LinearLayout>
 
@@ -116,11 +126,16 @@
                     android:layout_marginTop="3dp"
                     android:orientation="horizontal">
 
-                    <EditText
+                    <cn.cnlinfo.ccf.view.CleanEditText
                         android:id="@+id/et_verification_code"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:maxLength="4"
+                        android:textColor="@drawable/selector_edittext_text_color"
                         android:background="@drawable/edit_text_style" />
 
                     <TextView
@@ -129,7 +144,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="16dp"
                         android:layout_weight="0.5"
-                        android:background="@drawable/button_style"
+                        android:background="@drawable/selector_button_bg"
                         android:gravity="center"
                         android:text="3h18"
                         android:onClick="gainVerificationCode"
@@ -146,7 +161,7 @@
                     android:id="@+id/btn_login"
                     android:layout_width="69dp"
                     android:layout_height="22dp"
-                    android:background="@drawable/button_style"
+                    android:background="@drawable/selector_button_bg"
                     android:text="登录"
                     android:onClick="toLogin"/>
 
@@ -155,7 +170,7 @@
                     android:layout_width="69dp"
                     android:layout_height="22dp"
                     android:layout_marginLeft="18dp"
-                    android:background="@drawable/button_style"
+                    android:background="@drawable/selector_button_bg"
                     android:text="注册"
                     android:onClick="toRegister"
                     />
@@ -166,7 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:background="@null"
+                android:background="@drawable/selector_btn_forget_pass"
                 android:text="忘记密码?" />
         </LinearLayout>
     </LinearLayout>
