add call back password by security and phone number  in addition add network request test

--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -182,7 +182,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/selector_btn_forget_pass"
-                android:text="忘记密码?" />
+                android:text="忘记密码?"
+                android:onClick="toForgetPass"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
