增加时间转换，测试登录操作，并将json数据转为实体类，登录返回数据信息展示

--- a/app/src/main/res/layout/fragment_setting_center.xml
+++ b/app/src/main/res/layout/fragment_setting_center.xml
@@ -15,7 +15,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="取消" />
-
+    <Button
+        android:id="@+id/btn_exit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="退出" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
