--- a/app/src/main/res/layout/tab_text_fragment.xml
+++ b/app/src/main/res/layout/tab_text_fragment.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    tools:context="cn.cnlinfo.ccf.activity.CallBackBySecurityQuestionActivity">
-
+    android:gravity="center">
     <TextView
+        android:id="@+id/tv_tab_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="密保找回"/>
+        />
 </LinearLayout>
