--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -11,10 +11,10 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_gravity="center_vertical|left"
-        android:background="@null"
         android:layout_marginLeft="18dp"
-        android:src="@drawable/ic_back"
-        android:onClick="back"/>
+        android:background="@null"
+        android:onClick="back"
+        android:src="@drawable/ic_back" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -24,12 +24,12 @@
         android:layout_gravity="center"
         android:text="登录" />
 
-<!--    <ImageButton
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical|right"
-    android:background="@null"
-    android:layout_marginRight="18dp"
-    android:src="@drawable/icon_arrow_left_white" />-->
+    <ImageButton
+        android:id="@+id/ibt_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|right"
+        android:layout_marginRight="18dp"
+        android:background="@null" />
 
 </FrameLayout>
