修改找回密码界面

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,8 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cn.cnlinfo.ccf.activity.ForgetPasswordActivity">
-    <include layout="@layout/item_title"/>
-
+<!--    <include layout="@layout/item_title"/>-->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="225dp"
+        android:background="@drawable/ic_global"/>
     <com.shizhefei.view.indicator.FixedIndicatorView
         android:id="@+id/fixedIndicator"
         android:layout_width="match_parent"
