--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,28 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="PopupMenuTheme" parent="FullScreen">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="popupMenuStyle">@style/MyPopupMenu</item>
+        <item name="textAppearanceSmallPopupMenu">@style/MyTextAppearance</item>
+        <item name="textAppearanceLargePopupMenu">@style/MyTextAppearance</item>
+        <item name="android:dropDownListViewStyle">@style/MyListViewStyle</item>
     </style>
+
+    <style name="MyPopupMenu" >
+        <item name="android:popupBackground">@color/color_black_0e1214</item>
+    </style>
+
+    <style name="MyTextAppearance">
+        <item name="android:textColor">@color/color_white_ffffff</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+    <style name="MyListViewStyle">
+        <item name="android:divider">@color/color_gray_8b8c8d</item>
+        <item name="android:dividerHeight">1dp</item>
+        <item name="android:listSelector">@drawable/selector_btn_forget_pass</item>
+    </style>
+
     <style name="FullScreen" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowFullscreen">true</item>
         <item name="windowNoTitle">true</item>
@@ -39,10 +55,23 @@
         <item name="android:textSize">17sp</item>
         <item name="android:textColor">#0e1214</item>
     </style>
+    <style name="text_0e1214_20">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#0e1214</item>
+    </style>
+    <style name="text_0e1214_15">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#0e1214</item>
+    </style>
     <style name="text_333_12">
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">12sp</item>
     </style>
+    <style name="text_333_15">
+        <item name="android:textColor">#333333</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+    <!--spinner的主题-->
     <style name="spinner_theme" parent="FullScreen">
         <!-- spinner style -->
         <item name="android:dropDownListViewStyle">@style/spinner_style</item>
