--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,6 +63,10 @@
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">#0e1214</item>
     </style>
+    <style name="text_0e1214_12">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#0e1214</item>
+    </style>
     <style name="text_333_12">
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">12sp</item>
