--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -10,7 +10,6 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_gravity="center_vertical|left"
-        android:layout_marginLeft="18dp"
         android:background="@null"
         android:onClick="back"
         android:src="@drawable/ic_back" />
@@ -21,6 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:singleLine="true"
+        android:maxEms="15"
+        android:maxLength="20"
         android:text="登录" />
 
         <ImageButton
@@ -30,6 +32,5 @@
             android:background="@null"
             android:src="@drawable/icon_add"
             android:layout_gravity="end|center"
-            android:layout_marginRight="18dp"
             />
 </FrameLayout>
