添加循环包中的计步功能、循环动画（未添加进接口数据）

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -13,15 +13,16 @@
     <com.shizhefei.view.indicator.FixedIndicatorView
         android:id="@+id/fixedIndicator"
         android:layout_width="match_parent"
-        android:layout_height="35dp">
+        android:layout_height="35dp"
+        android:background="@color/color_white_ffffff">
 
     </com.shizhefei.view.indicator.FixedIndicatorView>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/vp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:id="@+id/vp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    </android.support.v4.view.ViewPager>
+</android.support.v4.view.ViewPager>
 
 </LinearLayout>
