--- a/app/src/main/res/layout/item_fragment_one.xml
+++ b/app/src/main/res/layout/item_fragment_one.xml
@@ -63,10 +63,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="18dp"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"
-            android:layout_marginTop="9dp"
+            android:layout_marginTop="4dp"
             android:orientation="vertical">
 
             <cn.cnlinfo.ccf.view.UpDownTextView
@@ -77,9 +76,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="9dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
@@ -106,10 +103,9 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="9dp"
-                android:layout_weight="1.5"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="9dp">
 
                 <TextView
                     style="@style/text_0e1214_15"
