--- a/app/src/main/res/menu/layout_menu.xml
+++ b/app/src/main/res/menu/layout_menu.xml
@@ -5,14 +5,14 @@
         android:icon="@drawable/ic_back"
         android:title="扫一扫" />
     <item
-        android:id="@+id/addFriend"
+        android:id="@+id/myqrcode"
         android:icon="@drawable/ic_back"
-        android:title="添加朋友"/>
+        android:title="我的二维码"/>
 
     <item
-        android:id="@+id/shareUser"
+        android:id="@+id/exit"
         android:icon="@drawable/ic_back"
-        android:title="分享用户"/>
+        android:title="退出账户"/>
 
     <item
         android:id="@+id/setting"
